--- a/DBAccess/DBAccess.csproj
+++ b/DBAccess/DBAccess.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="DummyData.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="DummyData.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
